--- a/GoTo/res/values/strings.xml
+++ b/GoTo/res/values/strings.xml
@@ -15,7 +15,7 @@
     <string name="action_settings">Settings</string>
     <string name="hello_world">Hello world!</string>
     <string name="mcb_rab">MCB/RAB</string>
-    <string name="pullo_center">PULLO CENTER (PAC)</string>
+    <string name="pullo_center">PULLO BUILDING (PAC)</string>
     <string name="jrrscc">JRR STUDENT COMM. CNTR</string>
     <string name="istc">GRUMBACHER ISTC</string>
     <string name="elias">SCIENCE BUILDING (ELIAS)</string>
@@ -45,10 +45,12 @@
     <string name="beginning">Beginnging</string>
     <string name="destination">destination</string>
     <string name="to">to</string>
-    <string name="new_destination">NEW DESTINATION</string>
+    <string name="new_destination">CHANGE DESTINATION</string>
     <string name="title_activity_choose_destination">Choose Destination</string>
     <string name="title_activity_pop_spot_info">Popular Spot Information</string>
     <color name="black">#000000</color>
     <string name="nothing"/>
+    <string name="bursar">BURSAR</string>
+    <string name="registrar">REGISTRAR</string>
 
 </resources>
